--- a/iis/hello-css/styles.css
+++ b/iis/hello-css/styles.css
@@ -1,3 +1,12 @@
 body {
-  color: #ff0000;
+  color: #414141; /* Dark gray */
+  background-color: #eeeeee; /* Light gray */
+}
+
+h1 {
+  font-size: 36px;
+}
+
+h2 {
+  font-size: 28px;
 }
