--- a/iis/hello-css/styles.css
+++ b/iis/hello-css/styles.css
@@ -3,10 +3,32 @@ body {
   background-color: #eeeeee; /* Light gray */
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Helvetica", "Arial", sans-serif;
+  font-weight: normal;
+}
+
 h1 {
   font-size: 36px;
 }
 
 h2 {
   font-size: 28px;
+}
+
+ul {
+  list-style-type: circle;
+}
+
+ol {
+  list-style-type: lower-roman;
+}
+
+a {
+  text-decoration: none;
 }
