Create a second button and style it

--- a/iis/css-selectors/styles.css
+++ b/iis/css-selectors/styles.css
@@ -15,6 +15,11 @@
   margin: 20px auto;
 }
 
+.call-to-action {
+  font-style: italic;
+  background-color: #eeb75a;
+}
+
 .page {
   width: 600px;
   margin: 0 auto;
