Styled and add interactivity to both buttons
used link pseudo class to address link, hover, visited states

--- a/iis/css-selectors/styles.css
+++ b/iis/css-selectors/styles.css
@@ -7,7 +7,10 @@
   font-style: normal;
 }
 
-.button {
+.button:link,
+.button:visited {
+  display: block;
+  text-decoration: none;
   color: #fff;
   background-color: #5995da;
   font-weight: bold;
@@ -19,12 +22,53 @@
   margin: 20px auto;
 }
 
-.call-to-action {
+.button:hover,
+.button:visited:hover {
+  color: #fff;
+  background-color: #76aeed;
+}
+
+.button:active,
+.button:visited:active {
+  color: #fff;
+  background-color: #5995da;
+}
+
+.call-to-action:link,
+.call-to-action:visited {
   font-style: italic;
+  background-color: #eeb75a;
+}
+
+.call-to-action:hover,
+.call-to-action:visited:hover {
+  background-color: #f5cf8e;
+}
+
+.call-to-action:active,
+.call-to-action:visited:active {
   background-color: #eeb75a;
 }
 
 .page {
   width: 600px;
   margin: 0 auto;
+}
+
+a:link {
+  color: blue;
+  text-decoration: none;
+}
+
+a:visited {
+  color: purple;
+}
+
+a:hover {
+  color: aqua;
+  text-decoration: underline;
+}
+
+a:active {
+  color: red;
 }
