--- a/iis/floats/styles.css
+++ b/iis/floats/styles.css
@@ -3,3 +3,24 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+.menu {
+  height: 100px;
+  background-color: #b2d6ff;
+}
+
+.sidebar {
+  height: 300px;
+  width: 200px;
+  background-color: #f09a9d;
+}
+
+.content {
+  height: 500px;
+  background-color: #f5cf8e;
+}
+
+.footer {
+  height: 200px;
+  background-color: #d6e9fe;
+}
