--- a/iis/floats/styles.css
+++ b/iis/floats/styles.css
@@ -7,6 +7,7 @@
 .page {
   width: 900px;
   margin: 0 auto;
+  border: 1px solid red;
 }
 
 .menu {
@@ -22,11 +23,14 @@
 }
 
 .content {
+  float: left;
+  width: 650px;
   height: 500px;
   background-color: #f5cf8e;
 }
 
 .footer {
+  clear: both;
   height: 200px;
   background-color: #d6e9fe;
 }
