Add full page width background color
by adding another div wrapper(.container) on top of .page
so now .page is only used for centering the floating elements
within it, and .container is used for displying full width
background color by moving to it the overflow:hidden property
also.

--- a/iis/floats/styles.css
+++ b/iis/floats/styles.css
@@ -5,11 +5,14 @@
 }
 
 .page {
-  overflow: hidden;
-  background-color: #eaedf0;
+  /* overflow: hidden; */
   width: 900px;
   margin: 0 auto;
-  border: 1px solid red;
+}
+
+.container {
+  background-color: #eaedf0;
+  overflow: hidden;
 }
 
 .menu {
