Finish magazine layout using floats

--- a/iis/floats/styles.css
+++ b/iis/floats/styles.css
@@ -32,10 +32,48 @@
   width: 650px;
   height: 500px;
   background-color: #f5cf8e;
+  padding: 20px;
+}
+
+.article-image {
+  float: left;
+  width: 300px;
+  height: 200px;
+  margin-right: 20px;
+  margin-bottom: 20px;
+}
+
+p {
+  margin-bottom: 20px;
 }
 
 .footer {
-  clear: both;
-  height: 200px;
+  overflow: hidden;
   background-color: #d6e9fe;
+}
+
+.column {
+  float: left;
+  width: 31%;
+  height: 160px;
+  margin: 20px 1.15%;
+  background-color: #b2d6ff;
+}
+
+.avatar {
+  float: left;
+  width: 60px;
+  height: 60px;
+  background-color: #d6e9fe;
+  margin: 25px;
+  border-radius: 40px;
+}
+
+.username {
+  margin-top: 30px;
+}
+
+.comment {
+  margin: 10px;
+  overflow: hidden;
 }
