--- a/iis/flexbox/styles.css
+++ b/iis/flexbox/styles.css
@@ -6,12 +6,25 @@
 
 .menu-container {
   display: flex;
+  justify-content: center;
   color: #fff;
   background-color: #5995da;
   padding: 20px 0;
 }
 
 .menu {
-  border: 1px solid #fff;
+  display: flex;
+  justify-content: space-between;
+  /* border: 1px solid #fff; */
   width: 900px;
+}
+
+.links {
+  /* border: 1px solid #fff; */
+  display: flex;
+  justify-content: flex-end;
+}
+
+.login {
+  margin-left: 20px;
 }
