--- a/iis/flexbox/styles.css
+++ b/iis/flexbox/styles.css
@@ -44,6 +44,12 @@
   align-items: center;
 }
 
+.social,
+.subscribe {
+  align-self: flex-end;
+  margin-bottom: 20px;
+}
+
 .photo-grid-container {
   display: flex;
   justify-content: center;
@@ -54,10 +60,20 @@
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+  flex-direction: row;
+  align-items: center;
 }
 
 .photo-grid-item {
   border: 1px solid #fff;
   width: 300px;
   height: 300px;
+}
+
+.first-item {
+  order: 1;
+}
+
+.last-item {
+  order: -1;
 }
