--- a/iis/flexbox/styles.css
+++ b/iis/flexbox/styles.css
@@ -77,3 +77,22 @@
 .last-item {
   order: -1;
 }
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer-item {
+  border: 1px solid #fff;
+  background-color: #d6e9fe;
+  height: 200px;
+  flex: 1;
+}
+
+.footer-one,
+.footer-three {
+  background-color: #5995da;
+  width: 300px;
+  flex: initial;
+}
