--- a/iis/flexbox/styles.css
+++ b/iis/flexbox/styles.css
@@ -29,6 +29,10 @@
   margin-left: 20px;
 }
 
+.signup {
+  margin-left: auto;
+}
+
 .header-container {
   color: #5995da;
   background-color: #d6e9fe;
